# JSON_Summator

./: CMakeLists.txt  JSON_Summator.cpp  README.md  boundedbuffer.hpp  csv_handler.cpp  csv_handler.hpp  dailydata.cpp  dailydata.hpp  input_data.proto  logging.cpp  logging.hpp  manager.cpp  manager.hpp  output_data.proto  worker.cpp  worker.hpp  worker_thread.cpp  worker_thread.hpp
TestSrc/: Pipfile  example_input.json  generator_new_parameters.py  generator_without_new_parameters.py  kafka_run.sh  reader_from_kafka.py  writer_to_kafka.py
TestSrc/csv/: data0.csv  meta.csv  sampleRequest.json  sampleResponse.json
include/: CMakeLists.txt  boundedbuffer.hpp
src/libraryMIPT/: CMakeLists.txt  problem_type.hpp  solver.hpp
src/libraryMIPT/LP/: linear_status.hpp  lp_solver.cpp  mad_max_lp_solver.hpp  mad_min_lp_solver.cpp  mad_min_lp_solver.hpp  simplex_method.hpp
src/libraryMIPT/io/: csv_reader.cpp
src/libraryMIPT/milp/: mad_statement.hpp
src/libraryMIPT/milp/mad_max/: MADmax_integer_local_improve.hpp  MADmaximize.cpp  advance_tableu.hpp  best_solution.hpp  return_table_to_feasibility.hpp
src/libraryMIPT/milp/mad_min/: CMakeLists.txt  advance_tableau.hpp  common.cpp  common.hpp  main.cpp  maximize_return_on_cube.cpp  node_build_simplex_table.hpp  parameters.cpp  return_table_to_feasibility.cpp  task_former.cpp  tighten_bounds.hpp
src/libraryMIPT/milp/mad_min/io/: mat.hpp
src/libraryMIPT/milp/mad_min/io/bits/: mat_array.hpp  mat_array_type.hpp  mat_device.hpp  mat_load.hpp
src/libraryMIPT/milp/mad_min/tests/: test_advance_tableau.cpp  test_advance_tableau.hpp  test_integer_local_improve.hpp  test_maximize_return_on_cube.cpp  test_node_build_simplex_table.cpp  test_node_constructor.cpp  test_node_constructor.hpp  test_parameters.cpp  test_return_table_to_feasibility.cpp  test_return_table_to_feasibility.hpp  test_tighten_bounds.cpp  test_tighten_bounds.hpp  tests.cpp
src/libraryMIPT/milp/mad_min/utils/: find.hpp  min_max.hpp  string.hpp
src/logging/: CMakeLists.txt  logging.cpp  logging.hpp
src/manager/: CMakeLists.txt  manager.cpp  manager.hpp
src/utils/: CMakeLists.txt  loc_utils.cpp  loc_utils.hpp
src/worker/: CMakeLists.txt  worker.cpp  worker.hpp
src/worker_thread/: CMakeLists.txt  worker_thread.cpp  worker_thread.hpp
vtb-project/: .gitignore  CMakeLists.txt
vtb-project/data/: close.csv  sharedata_reduced.csv
vtb-project/data/vtb/: close.csv  covariance.csv  meta.csv
vtb-project/include/: CMakeLists.txt
vtb-project/matlab/MADmax/: BestIntegerSolution.m  CommonParameters.m  CommonParametersMADmax.m  MADmax_feas.m  MADmax_integer_local_improve.m  MADmaximize_return_on_cube.m  NodeClass.m  NodeClassMADmaxfeas.m  NodeMADmax.m  advance_tableau.m  advance_tableau_short.m  computeMADvariance.m  create_random_instance.m  integer_local_improveMADmaxfeas.m  maximize_return_on_cube.m  optimizeMADmax.m  quick_return_to_feasibility.m  quick_return_to_feasibility_short.m  return_table_to_feasibility.m  return_table_to_feasibility_short.m  sharedata_reduced.mat  tighten_boundsMADmax.m  tighten_boundsMADmax_feas.m
vtb-project/matlab/MADmin/: BestIntegerSolution.m  CommonParameters.m  CommonParametersMADmin.m  NodeClass.m  NodeMADmin.m  advance_tableau.m  create_random_instance.m  h5_count.m  h5_save.m  integer_local_improve.m  mat_count.m  mat_save.m  mat_save_p.m  maximize_return_on_cube.m  optimizeMADmin.m  p_info.m  quick_return_to_feasibility.m  return_table_to_feasibility.m  tighten_boundsMADmin.m
vtb-project/matlab/MADmin/dump/: mat2hdf.py
vtb-project/python/: test.py
vtb-project/python/vtb/: __init__.py  data.py  mad.py  mean_variance.py  problem.py  utils.py
vtb-project/scripts/: create_csv.py  json_generator.py  mat_to_csv.py
vtb-project/src/: CMakeLists.txt  params.cpp  params.hpp  solution_status.hpp  types.hpp  utils.hpp
vtb-project/src/LP/: lp_solver.hpp  mad_max_lp_solver.cpp  simplex.hpp  simplex_demo.cpp  simplex_method.cpp
vtb-project/src/io/: csv_reader.hpp
vtb-project/src/milp/: MADmax_solver.cpp  MADmax_solver.hpp  mad_solution.hpp
vtb-project/src/milp/mad_max/: MADmax_integer_local_improve.cpp  MADmaximize.hpp  advance_tableu.cpp  best_solution.cpp  node.cpp  node.hpp  quick_return_to_feasibility.cpp  quick_return_to_feasibility.hpp  return_table_to_feasibility.cpp
vtb-project/src/milp/mad_min/: CMakeLists.txt  advance_tableau.cpp  best_integer_solution.cpp  best_integer_solution.hpp  csv.cpp  csv.hpp  demo.cpp  demo2.cpp  integer_local_improve.cpp  integer_local_improve.hpp  maximize_return_on_cube.hpp  node.cpp  node.hpp  node_build_simplex_table.cpp  parameters.hpp  quick_return_to_feasibility.cpp  quick_return_to_feasibility.hpp  return_table_to_feasibility.hpp  solver.cpp  solver.hpp  task_former.hpp  tighten_bounds.cpp  utils.hpp
vtb-project/src/milp/mad_min/io/bits/: mat_array.cpp  mat_array_type.cpp  mat_device.cpp  mat_eigen.cpp  mat_std_types.cpp
vtb-project/src/milp/mad_min/tests/: test_integer_local_improve.cpp  test_maximize_return_on_cube.hpp  test_node_bifurcate.cpp  test_node_bifurcate.hpp  test_node_build_simplex_table.hpp  test_parameters.hpp  test_quick_return_to_feasibility.cpp  test_quick_return_to_feasibility.hpp  tests.hpp
vtb-project/src/runner/: mad_max_lp_demo.cpp  mad_min_demo.cpp  mad_min_lp_demo.cpp  main.cpp  optimizeMADmax.cpp  simplex_demo.cpp
vtb-project/src/task_former/: task_former.cpp  task_former.hpp
vtb-project/test/: CMakeLists.txt  test_maximizeoncube.cpp  test_simplex.cpp
vtb-project/test/test_data/: leaf_test_quick_after_Bas.csv  leaf_test_quick_after_Tab.csv  leaf_test_quick_before_Bas.csv  leaf_test_quick_before_Tab.csv  leaf_test_quick_before_delta.csv  root_test_advanced_after_Bas.csv  root_test_advanced_after_Tab.csv  root_test_advanced_before_Bas.csv  root_test_advanced_before_Tab.csv
